[tool.poetry]
name = "dash-treeview-antd"
version = "0.1.0"
description = ""
authors = ["Simen Sørbøe Klommestein <ssk@toi.com>"]
readme = "README.md"
packages = [{ include = "dash_treeview_antd" }]

[tool.poetry.dependencies]
python = "^3.9"
chromedriver-binary = "^114.0.5735.90.0"
dash = "^2.10.2"
dash-core-components = "^2.0.0"
dash-html-components = "^2.0.0"
dash-renderer = "^1.9.1"
ipdb = "^0.13.13"
percy = "^2.0.2"
selenium = "^4.10.0"
flake8 = "^6.0.0"
pylint = "^2.17.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
